2004-04-29  Lawrence Mitchell  <wence@gmx.li>

	* lisppaste.el (lisppaste-list-recent-pastes): Create correct
	buffer name.
	(lisppaste-list-paste-annotations): Add separator in paste list.
	(lisppaste-list-recent-pastes): Ditto.
	(lisppaste-help): Change ordering of keybindings.
	(lisppaste-creation-help): Add C-c C-d keybinding to help text.
	(lisppaste-create-paste): Bind C-c C-d to `lisppaste-quit'.

2004-04-28  Lawrence Mitchell  <wence@gmx.li>

	* multi-region.el (featurep): Require overlay for XEmacs.
	(multi-region-mark-region): Ensure that `transient-mark-mode' is
	boundp.

	* lisppaste.el: Add link to xml-rpc.el, and patch.
	(lisppaste-all-channels): New function.
	(lisppaste-read-channel): Use it.
	(lisppaste-check-channel): Shorten error message.
	(lisppaste-display-paste): Add properties to whole buffer, and
	more of them too.
	(lisppaste-list-paste-annotations): Add more properties.
	(lisppaste-list-recent-pastes): Ditto.

2004-04-27  Lawrence Mitchell  <wence@gmx.li>

	* lisppaste.el: Add file header and minimal Commentary.
	(lisppaste-new-paste): Update to reflect new lisppaste interface,
	which now deals with nil arguments correctly.
	(lisppaste-annotate-paste): Removed.
	(lisppaste-get-paste, lisppaste-list-annotations): Send correct
	command. 
	(lisppaste-list-pastes, lisppaste-channels)
	(lisppaste-check-channel, lisppaste-annotations): New functions.
	(lisppaste-channels): New variable.
	(lisppaste-paste-region): Check channel before pasting.
	(lisppaste-create-new-paste): Ditto.
	(lisppaste-create-new-annotation): Ditto.
	(lisppaste-display-paste): Deal with new lisppaste return format.
	(lisppaste-list-paste-annotations): Ditto.
	(lisppaste-list-recent-pastes): New function
	(lisppaste-display-supported-channels): New function.
	(lisppaste-help): New variable.
	(lisppaste-help): Use it.
	(lisppaste): New function.
	(lisppaste-mode-map): Add new bindings.
	(lisppaste-mode): Go to beginning of buffer.
